# cocotbext-wishbone

./: README.rst  pyproject.toml  setup.py
cocotbext/tests/: TODO.md
cocotbext/wishbone/: driver.py  monitor.py
